--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<h1>小城夫婦</h1>
+<% @photos["contents"].map do |photo| %>
+  <%= image_tag photo["image"]["url"], width: '20%', height: '20%' %>
+<% end %>
